Got the layout done(poorly) but i am going to try to fix it, i just got too far down the rabit whole, sinking too much time into css, i had to jump onto components.

--- a/components/Tabs/Tabs.css
+++ b/components/Tabs/Tabs.css
@@ -1,3 +1,13 @@
+.Tabs{
+  border: 2px solid black;
+  max-width: 800px;
+  
+  
+}
+.Tabs__h1{
+  display:flex;
+ justify-content: center;
+}
 .Tabs__item {
   display: none;
 }
@@ -5,6 +15,7 @@
 .Tabs__item-selected {
   display: block;
   padding-left: 15px;
+  padding-bottom:15px;
  
 }
 
